@@ -17,8 +17,18 @@
 
 package org.openqa.selenium.grid.distributor.httpd;
 
+import static java.net.HttpURLConnection.HTTP_OK;
+import static java.net.HttpURLConnection.HTTP_UNAVAILABLE;
+import static org.openqa.selenium.grid.config.StandardGridRoles.DISTRIBUTOR_ROLE;
+import static org.openqa.selenium.grid.config.StandardGridRoles.EVENT_BUS_ROLE;
+import static org.openqa.selenium.grid.config.StandardGridRoles.HTTPD_ROLE;
+import static org.openqa.selenium.grid.config.StandardGridRoles.SESSION_MAP_ROLE;
+import static org.openqa.selenium.grid.config.StandardGridRoles.SESSION_QUEUE_ROLE;
+import static org.openqa.selenium.remote.http.HttpMethod.GET;
+import static org.openqa.selenium.remote.http.Route.get;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+
 import com.google.common.collect.ImmutableSet;
 import com.google.common.net.MediaType;
 
@@ -40,16 +50,6 @@ import java.util.Collections;
 import java.util.Set;
 import java.util.logging.Logger;
 
-import static java.net.HttpURLConnection.HTTP_OK;
-import static java.net.HttpURLConnection.HTTP_UNAVAILABLE;
-import static org.openqa.selenium.grid.config.StandardGridRoles.DISTRIBUTOR_ROLE;
-import static org.openqa.selenium.grid.config.StandardGridRoles.EVENT_BUS_ROLE;
-import static org.openqa.selenium.grid.config.StandardGridRoles.HTTPD_ROLE;
-import static org.openqa.selenium.grid.config.StandardGridRoles.SESSION_MAP_ROLE;
-import static org.openqa.selenium.grid.config.StandardGridRoles.SESSION_QUEUE_ROLE;
-import static org.openqa.selenium.remote.http.HttpMethod.GET;
-import static org.openqa.selenium.remote.http.Route.get;
-
 @AutoService(CliCommand.class)
 public class DistributorServer extends TemplateGridServerCommand {
 
@@ -67,7 +67,8 @@ public class DistributorServer extends TemplateGridServerCommand {
 
   @Override
   public Set<Role> getConfigurableRoles() {
-    return ImmutableSet.of(DISTRIBUTOR_ROLE, EVENT_BUS_ROLE, HTTPD_ROLE, SESSION_MAP_ROLE, SESSION_QUEUE_ROLE);
+    return ImmutableSet.of(DISTRIBUTOR_ROLE, EVENT_BUS_ROLE, HTTPD_ROLE, SESSION_MAP_ROLE,
+                           SESSION_QUEUE_ROLE);
   }
 
   @Override
@@ -105,7 +106,7 @@ public class DistributorServer extends TemplateGridServerCommand {
         Route.matching(req -> GET.equals(req.getMethod()) && "/status".equals(req.getUri()))
           .to(() -> req -> new HttpResponse()
             .setContent(Contents.asJson(
-              ImmutableMap.of("value", ImmutableMap.of(
+             Map.of("value",Map.of(
                 "ready", true,
                 "message", "Distributor is ready"))))),
         get("/readyz").to(() -> readinessCheck)),
