@@ -17,7 +17,10 @@
 
 package org.openqa.selenium.grid.node;
 
-import com.google.common.collect.ImmutableMap;
+import static org.openqa.selenium.remote.http.Contents.asJson;
+
+
+
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.SessionId;
@@ -26,8 +29,6 @@ import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 
 import java.io.UncheckedIOException;
-
-import static org.openqa.selenium.remote.http.Contents.asJson;
 
 class GetNodeSession implements HttpHandler {
 
@@ -43,6 +44,6 @@ class GetNodeSession implements HttpHandler {
   public HttpResponse execute(HttpRequest req) throws UncheckedIOException {
     Session session = node.getSession(id);
 
-    return new HttpResponse().setContent(asJson(ImmutableMap.of("value", session)));
+    return new HttpResponse().setContent(asJson(Map.of("value", session)));
   }
 }
