@@ -17,7 +17,14 @@
 
 package org.openqa.selenium.grid.sessionmap;
 
-import com.google.common.collect.ImmutableMap;
+import static org.openqa.selenium.remote.RemoteTags.CAPABILITIES;
+import static org.openqa.selenium.remote.RemoteTags.SESSION_ID;
+import static org.openqa.selenium.remote.http.Contents.asJson;
+import static org.openqa.selenium.remote.tracing.HttpTracing.newSpanAsChildOf;
+import static org.openqa.selenium.remote.tracing.Tags.HTTP_REQUEST;
+
+
+
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.SessionId;
@@ -26,12 +33,6 @@ import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 import org.openqa.selenium.remote.tracing.Span;
 import org.openqa.selenium.remote.tracing.Tracer;
-
-import static org.openqa.selenium.remote.RemoteTags.CAPABILITIES;
-import static org.openqa.selenium.remote.RemoteTags.SESSION_ID;
-import static org.openqa.selenium.remote.http.Contents.asJson;
-import static org.openqa.selenium.remote.tracing.Tags.HTTP_REQUEST;
-import static org.openqa.selenium.remote.tracing.HttpTracing.newSpanAsChildOf;
 
 class GetFromSessionMap implements HttpHandler {
 
@@ -56,7 +57,7 @@ class GetFromSessionMap implements HttpHandler {
       CAPABILITIES.accept(span, session.getCapabilities());
       span.setAttribute("session.uri", session.getUri().toString());
 
-      return new HttpResponse().setContent(asJson(ImmutableMap.of("value", session)));
+      return new HttpResponse().setContent(asJson(Map.of("value", session)));
     }
   }
 }
