@@ -23,7 +23,7 @@ import static org.openqa.selenium.remote.tracing.HttpTracing.newSpanAsChildOf;
 import static org.openqa.selenium.remote.tracing.Tags.HTTP_REQUEST;
 import static org.openqa.selenium.remote.tracing.Tags.HTTP_RESPONSE;
 
-import com.google.common.collect.ImmutableMap;
+
 
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.http.HttpHandler;
@@ -56,13 +56,13 @@ public class ClearSessionQueue implements HttpHandler {
       HttpResponse response = new HttpResponse();
       if (value != 0) {
         response.setContent(
-          asJson(ImmutableMap.of(
+          asJson(Map.of(
             "value", value,
             "message", "Cleared the new session request queue",
             "cleared_requests", value)));
       } else {
         response.setContent(
-          asJson(ImmutableMap.of(
+          asJson(Map.of(
             "value", value,
             "message",
             "New session request queue empty. Nothing to clear.")));
@@ -75,7 +75,7 @@ public class ClearSessionQueue implements HttpHandler {
       span.setAttribute(AttributeKey.ERROR.getKey(), true);
       span.setStatus(Status.INTERNAL);
       HttpResponse response = new HttpResponse().setStatus((HTTP_INTERNAL_ERROR)).setContent(
-        asJson(ImmutableMap.of(
+        asJson(Map.of(
           "value", 0,
           "message", "Error while clearing the queue. Full queue may not have been cleared.")));
 
