@@ -17,7 +17,7 @@
 
 package org.openqa.selenium.remote.mobile;
 
-import com.google.common.collect.ImmutableMap;
+
 
 import org.openqa.selenium.mobile.NetworkConnection;
 import org.openqa.selenium.remote.DriverCommand;
@@ -36,16 +36,16 @@ public class RemoteNetworkConnection implements NetworkConnection {
   @Override
   public ConnectionType getNetworkConnection() {
     return new ConnectionType(((Number) executeMethod.execute(DriverCommand.GET_NETWORK_CONNECTION,
-                                                               null)).intValue());
+                                                              null)).intValue());
   }
 
   @Override
   public ConnectionType setNetworkConnection(
-      ConnectionType type) {
-    Map<String, ConnectionType> mode = ImmutableMap.of("type", type);
+    ConnectionType type) {
+    Map<String, ConnectionType> mode =Map.of("type", type);
     return new ConnectionType(((Number) executeMethod.execute(DriverCommand.SET_NETWORK_CONNECTION,
-                                                            ImmutableMap
+                                                              ImmutableMap
                                                                 .of("parameters", mode)))
-                                  .intValue());
+                                .intValue());
   }
 }
