@@ -22,11 +22,6 @@ import static java.util.Collections.singletonMap;
 import static org.openqa.selenium.json.Json.JSON_UTF_8;
 import static org.openqa.selenium.remote.http.Contents.string;
 
-import com.google.common.collect.ImmutableMap;
-
-import dev.failsafe.Failsafe;
-import dev.failsafe.RetryPolicy;
-
 import org.openqa.selenium.grid.config.CompoundConfig;
 import org.openqa.selenium.grid.config.Config;
 import org.openqa.selenium.grid.config.MapConfig;
@@ -45,12 +40,16 @@ import org.openqa.selenium.remote.http.HttpMethod;
 import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 
+import dev.failsafe.Failsafe;
+import dev.failsafe.RetryPolicy;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.temporal.ChronoUnit;
+import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -205,10 +204,11 @@ public class NettyAppServer implements AppServer {
 
   @Override
   public String create(Page page) {
-    try (HttpClient client = HttpClient.Factory.createDefault().createClient(new URL(whereIs("/")))) {
+    try (HttpClient client = HttpClient.Factory.createDefault()
+      .createClient(new URL(whereIs("/")))) {
       HttpRequest request = new HttpRequest(HttpMethod.POST, "/common/createPage");
       request.setHeader(CONTENT_TYPE, JSON_UTF_8);
-      request.setContent(Contents.asJson(ImmutableMap.of("content", page.toString())));
+      request.setContent(Contents.asJson(Map.of("content", page.toString())));
       HttpResponse response = client.execute(request);
       return string(response);
     } catch (IOException ex) {
