@@ -17,7 +17,17 @@
 
 package org.openqa.selenium.grid.gridui;
 
-import com.google.common.collect.ImmutableMap;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.openqa.selenium.grid.gridui.Urls.whereIs;
+import static org.openqa.selenium.json.Json.MAP_TYPE;
+import static org.openqa.selenium.remote.http.HttpMethod.GET;
+import static org.openqa.selenium.support.ui.ExpectedConditions.textToBe;
+import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfAllElementsLocatedBy;
+import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfElementLocated;
+import static org.openqa.selenium.testing.Safely.safelyCall;
+
+
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -45,15 +55,6 @@ import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.openqa.selenium.grid.gridui.Urls.whereIs;
-import static org.openqa.selenium.json.Json.MAP_TYPE;
-import static org.openqa.selenium.remote.http.HttpMethod.GET;
-import static org.openqa.selenium.support.ui.ExpectedConditions.textToBe;
-import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfAllElementsLocatedBy;
-import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfElementLocated;
-import static org.openqa.selenium.testing.Safely.safelyCall;
 
 class OverallGridTest {
 
@@ -110,7 +111,7 @@ class OverallGridTest {
     int port = PortProber.findFreePort();
 
     Config config = new MemoizedConfig(
-      new MapConfig(ImmutableMap.of(
+      new MapConfig(Map.of(
         "server", Collections.singletonMap("port", port),
         "node", Collections.singletonMap("detect-drivers", true))));
 
@@ -124,13 +125,13 @@ class OverallGridTest {
   private void waitUntilReady(Server<?> server) {
     try (HttpClient client = HttpClient.Factory.createDefault().createClient(server.getUrl())) {
       new FluentWait<>(client)
-          .withTimeout(Duration.ofSeconds(5))
-          .until(
-              c -> {
-                HttpResponse response = c.execute(new HttpRequest(GET, "/status"));
-                Map<String, Object> status = Values.get(response, MAP_TYPE);
-                return status != null && Boolean.TRUE.equals(status.get("ready"));
-              });
+        .withTimeout(Duration.ofSeconds(5))
+        .until(
+          c -> {
+            HttpResponse response = c.execute(new HttpRequest(GET, "/status"));
+            Map<String, Object> status = Values.get(response, MAP_TYPE);
+            return status != null && Boolean.TRUE.equals(status.get("ready"));
+          });
     }
   }
 
