@@ -22,29 +22,27 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.google.common.collect.ImmutableMap;
-
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.remote.DriverCommand;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.RemoteLogs;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.logging.Level;
 
 class PerformanceLoggingMockTest {
 
   @Test
   void testMergesRemoteLogs() {
-    final ExecuteMethod executeMethod = mock(ExecuteMethod.class);
+    ExecuteMethod executeMethod = mock(ExecuteMethod.class);
 
     when(executeMethod.execute(
-        DriverCommand.GET_LOG, ImmutableMap.of(RemoteLogs.TYPE_KEY, LogType.PROFILER)))
-        .thenReturn(List.of(ImmutableMap.of(
-          "level", Level.INFO.getName(),
-          "timestamp", 1L,
-          "message", "second")));
+      DriverCommand.GET_LOG, Map.of(RemoteLogs.TYPE_KEY, LogType.PROFILER)))
+      .thenReturn(List.of(Map.of(
+        "level", Level.INFO.getName(),
+        "timestamp", 1L,
+        "message", "second")));
 
     LocalLogs localLogs = LocalLogs.getStoringLoggerInstance(singleton(LogType.PROFILER));
     RemoteLogs logs = new RemoteLogs(executeMethod, localLogs);
